--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,8 @@
   "solidity.packageDefaultDependenciesDirectory": "dependencies",
   "editor.formatOnSave": true,
   "[solidity]": {
-    "editor.defaultFormatter": "JuanBlanco.solidity" 
+    "editor.defaultFormatter": "JuanBlanco.solidity"
   },
   "solidity.formatter": "forge",
-  "solidity.compileUsingRemoteVersion": "v0.8.23",
-  "prettier.configPath": "./prettier.config.js"
+  "solidity.compileUsingRemoteVersion": "v0.8.23"
 }
-                                      
